--- a/Files/Config.properties
+++ b/Files/Config.properties
@@ -1,3 +1,3 @@
 userName=Admin
-password=Hum@nhrm123
+userPassword=Hum@nhrm123
 URL=http://hrm.syntaxtechs.net/humanresources/symfony/web/index.php/auth/login
